[gd_scene load_steps=2 format=3 uid="uid://c7x8y9z0a1b2c3d4"]

[ext_resource type="Script" path="res://scenes/BonusLifeAdScene.gd" id=1]
[ext_resource type="Script" path="res://menus/widgets/UIButton.gd"  id=2]

[node name="BonusLifeAdScene" type="Control"]
layout_mode     = 3
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2
script          = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
layout_mode     = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2
color           = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode     = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode                         = 2
theme_override_constants/separation = 30

[node name="AdTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode                          = 2
theme_override_colors/font_color     = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size  = 36
horizontal_alignment                 = 1

[node name="AdContent" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode                         = 2
theme_override_colors/font_color    = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment                = 1

[node name="CountdownLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode                         = 2
theme_override_colors/font_color    = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment                = 1

[node name="ButtonContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="TextureButton" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)
